--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,46 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: managerApp-app
-  namespace: managerapp
+  name: frontend-app
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: managerApp-app
+      app: frontend-app
   template:
     metadata:
       labels:
-        app: managerApp-app
+        app: frontend-app
     spec:
       containers:
-      - name: managerApp-app
-        image: nginx:alpine
+      - name: frontend-container
+        image: <container-registry-name>/frontend-app:latest
         ports:
         - containerPort: 80
-        volumeMounts:
-        - name: app-volume
-          mountPath: /usr/share/nginx/html
-      volumes:
-      - name: app-volume
-        configMap:
-          name: angular-app-configmap
-
----
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: angular-app-configmap
-  namespace: managerapp
-data:
-  index.html: |
-    <html>
-    <head>
-      <title>managerApp-app</title>
-    </head>
-    <body>
-      <app-root></app-root>
-      <script src="main.js"></script>
-    </body>
-    </html>
-  main.js: |
